--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.10.1",
     "pg": "^8.14.1",
-    "postgres": "^3.4.5"
+    "postgres": "^3.4.5",
+    "winston": "^3.17.0"
   }
 }
